<resources>
    <string name="app_name">Pixibo Zalora</string>
    <string name="no_internet" translatable="false">No Internet Connection</string>
    <string name="something_wrong" translatable="false">Something went wrong !!</string>
    <string name="cm">cm</string>
    <string name="ft">ft</string>
    <string name="in">in</string>
    <string name="kg">kg</string>
    <string name="lb">lbs</string>
    <string name="au" translatable="false">AU</string>
    <string name="eu" translatable="false">EU</string>
    <string name="fr" translatable="false">FR</string>
    <string name="uk" translatable="false">UK</string>
    <string name="us" translatable="false">US</string>
    <string name="find_my_size">FIND MY SIZE</string>
    <string name="check_your_fit">CHECK YOUR FIT</string>
    <string name="your_size">Your Size is</string>
    <string name="privacy_policy">Pixibo will not share or disclose your personal information to anyone.</string>
    <string name="privacy_powered_by">Powered by</string>
    <string name="privacy_powered_text">Privacy Policy</string>
    <string name="privacy_after_logo"> </string>
    <string name="loader_text">Finding the best size for you</string>
    <string name="error_text">Oops! \nSomething went wrong</string>
    <string name="error_try_again">TRY AGAIN</string>
    <string name="bust_text">Place the measuring tape around the fullest part of your bust, keeping the tape level around your body. If needed, round up to the nearest whole number.</string>
    <string name="header_text">LOOKS LIKE YOU’RE A SIZE </string>
    <string name="header_text_2">FOR THIS ITEM</string>
    <string name="international" translatable="false">INTERNATIONAL </string>
    <string name="text_continue">CONTINUE</string>
    <string name="dont_know_measurement">Don’t know? Enter measurements instead</string>
    <string name="brand_not_in_list">That brand\'s not in our list. Click \"+\" to add it.</string>
    <string name="brand_thanks">Please try searching for another brand in the meantime.</string>
    <string name="brand_category_select">SELECT</string>
    <string name="apparel_find_right_size">LET\'S FIND THE RIGHT SIZE FOR YOU</string>
    <string name="apparel_body_profile">Your body profile</string>
    <string name="apparel_bra_profile">Your bra size</string>
    <string name="apparel_age">AGE</string>
    <string name="apparel_height">HEIGHT</string>
    <string name="apparel_weight">WEIGHT</string>
    <string name="apparel_bra_size">SIZE TYPE</string>
    <string name="apparel_bra_band">BAND</string>
    <string name="apparel_bra_cup">CUP</string>
    <string name="apparel_bra_overbust">OVERBUST</string>
    <string name="apparel_bra_select_">Select Bra Size instead</string>
    <string name="apparel_fit_accurate">WANT A MORE ACCURATE FIT?</string>
    <string name="apparel_fit_fav_category">Tell us about your favourite </string>
    <string name="apparel_fit_what_brand">WHAT BRAND IS IT?</string>
    <string name="apparel_fit_skip">SKIP</string>
    <string name="apparel_brand_fav_size">What size is your favourite </string>
    <string name="apparel_brand_fav_size_2"> from </string>
    <string name="apparel_brand_fav_size_3"> \? </string>
    <string name="apparel_brand_range">RANGE</string>
    <string name="apparel_brand_size">SIZE</string>
    <string name="apparel_regular">REGULAR</string>
    <string name="apparel_petite">PETITE</string>
    <string name="apparel_plus">PLUS</string>
    <string name="apparel_size_error">Please select a size to continue</string>
    <string name="female_apparel_brand_1" translatable="false">Mango</string>
    <string name="female_apparel_brand_2" translatable="false">Dorothy Perkins</string>
    <string name="female_apparel_brand_3" translatable="false">Cotton On</string>
    <string name="female_apparel_brand_4" translatable="false">Zalora</string>
    <string name="male_apparel_brand_1" translatable="false">Abercrombie &amp; Fitch</string>
    <string name="male_apparel_brand_2" translatable="false">Topman</string>
    <string name="male_apparel_brand_3" translatable="false">Cotton On</string>
    <string name="male_apparel_brand_4" translatable="false">Nike</string>
    <string name="footwear_brand_adidas" translatable="false">Adidas</string>
    <string name="footwear_brand_converse" translatable="false">Converse</string>
    <string name="footwear_brand_nike" translatable="false">Nike</string>
    <string name="footwear_brand_vans" translatable="false">Vans</string>
    <string name="footwear_brand_puma" translatable="false">Puma</string>
    <string name="footwear_brand_onitsuka_tiger" translatable="false">Onitsuka Tiger</string>
    <string name="footwear_brand_melissa" translatable="false">Melissa</string>
    <string name="footwear_brand_reebok" translatable="false">Reebok</string>
    <string name="footwear_brand_birkenstock" translatable="false">Birkenstock</string>
    <string name="footwear_brand_aldo" translatable="false">Aldo</string>
    <string name="apparel_last_question">LAST QUESTION!</string>
    <string name="apparel_last_fit">How would you like this item to fit?</string>
    <string name="apparel_last_fit_tight">Tight</string>
    <string name="apparel_last_fit_regular">Regular</string>
    <string name="apparel_last_fit_loose">Loose</string>
    <string name="apparel_last_fit_tell_size" translatable="false">TELL ME MY SIZE</string>
    <string name="apparel_last_fit_regular_text">Regular fit means that you prefer to wear this item as it was intended by the brand.</string>
    <string name="apparel_last_fit_tight_text">Tight fit means that you prefer this item to fit closer to the body for a contoured, slim silhouette.</string>
    <string name="apparel_last_fit_loose_text">Loose fit means that you prefer this item to fit looser on the body for a less structured, relaxed silhouette.</string>
    <string name="apparel_result_text_best">THIS SIZE SUITS YOU BEST</string>
    <string name="apparel_result_text_check_fit">SEE HOW IT FITS YOUR</string>
    <string name="apparel_result_text_check_fit_chest">CHEST</string>
    <string name="apparel_result_text_check_fit_bust">BUST</string>
    <string name="apparel_result_text_check_fit_waist">WAIST</string>
    <string name="apparel_result_text_check_fit_hips">HIPS</string>
    <string name="apparel_result_text_fit_tight">Too Tight</string>
    <string name="apparel_result_text_fit_perfect">Perfect</string>
    <string name="apparel_result_text_fit_loose">Too Loose</string>
    <string name="apparel_result_preferred_fit">Your preferred fit:</string>
    <string name="apparel_result_edit">edit</string>
    <string name="apparel_result_add_to_cart">ADD TO CART</string>
    <string name="apparel_result_start_over">START OVER</string>
    <string name="apparel_result_size">SIZE</string>
    <string name="apparel_result_not_fit">The sizes we have may not fit you well</string>
    <string name="apparel_result_closest_match">This is our closest match</string>
    <string name="error_required">Required</string>
    <string name="error_age">Value must be between 15 and 80</string>
    <string name="error_height_cm">Value must be between 140 and 190</string>
    <string name="error_height_ft">Value must be between 4’7” and 6’3”</string>
    <string name="error_weight_kg">Value must be between 40 and 110</string>
    <string name="error_weight_lb">Value must be between 88 and 243</string>
    <string name="error_bust_cm">Value must be between 75 and 155</string>
    <string name="error_bust_in">Value must be between 30 and 61</string>
    <string name="footwear_right_size">Let’s find the right size for you</string>
    <string name="footwear_get_recommendation">What shoes do you wear?</string>
    <string name="footwear_fit_what_brand">WHAT BRAND IS IT?</string>
    <string name="footwear_pick_category">"What is the category of your "</string>
    <string name="footwear_pick_category_2">shoes?</string>
    <string name="footwear_pick_category_optional">(optional)</string>
    <string name="footwear_pick_category_model">"What is the model name of your "</string>
    <string name="footwear_pick_category__model2">shoes?</string>
    <string name="footwear_category">CATEGORY</string>
    <string name="footwear_what_model">WHAT MODEL IS IT?</string>
    <string name="footwear_what_size">What size is your </string>
    <string name="footwear_what_size_2"> shoes \?</string>
    <string name="footwear_width">WIDTH</string>
    <string name="footwear_regular" translatable="false">REGULAR</string>
    <string name="footwear_narrow" translatable="false">NARROW</string>
    <string name="footwear_wide" translatable="false">WIDE</string>
    <string name="footwear_extra_wide" translatable="false">EXTRA WIDE</string>
    <string name="footwear_result_continue">continue shopping</string>
    <string name="footwear_result_add_to_cart">ADD TO BAG</string>
    <string name="footwear_result_best_size">THIS SIZE SUITS YOU BEST</string>
    <string name="footwear_result_not_recommended">Sorry, this item does not \ncome in your size</string>
    <string name="footwear_result_out_of_stock">SORRY, THIS ITEM IS OUT OF STOCK IN THIS SIZE</string>
    <string name="bra_right_size">Get a size recommendation based on a bra you already wear</string>
    <string name="bra_brand_not_listed">Brand is not listed here</string>
    <string name="bra_bra_size">What\'s the size of the bra?</string>
    <string name="bra_type_wired">WIRED</string>
    <string name="bra_type_unwired">UNWIRED</string>
    <string name="bra_type">Bra Type</string>
    <string name="bra_result_best_size">For this style, the best size for you is</string>
    <string name="bra_result_how_fit">How should it fit?</string>
    <string name="bra_result_tell_more">Tell us more about how your bra fits to make sure.</string>
    <string name="bra_result_tell_more_text">The band on a new bra should fit properly on the last clasp. Straps should lie flat without slipping or digging. Lean forward and gently pull your breasts forward to fill out your cups. If there are no lumps or bulges, it’s the right fit.</string>
    <string name="bra_result_taken_account">We’ve taken into account how your current bra fits.</string>
    <string name="bra_result_accurate_fit">For a more accurate assessment, finish answering questions about how your bra fits.</string>
    <string name="bra_band_feel">How does your band feel?</string>
    <string name="bra_cup_fit">How do the cups fit?</string>
    <string name="bra_cup_gaps">Where are the gaps?</string>
    <string name="bra_how_old">How old is your bra?</string>
    <string name="bra_strap_fit">How do the straps fit?</string>
    <string name="bra_fav_style">What is the style of your bra?</string>
    <string name="bra_underwire_bust">How do the under wires fit on the side of your bust?</string>
    <string name="bra_underwire_bust_front">How do the front center and underwire fit?</string>
    <string name="bra_feel_digging">Does fastening on a looser hook help?</string>
    <string name="bra_tighter_hook">Does fastening on a tighter hook help?</string>
    <string name="bra_isOld_bra">Do you wear the same bra more than 2 days in a row?</string>
    <string name="bra_stap_gap">Does tightening the straps get rid of gap?</string>
    <string name="bra_feel_yes">Yes</string>
    <string name="bra_feel_no">No</string>
    <string name="bra_not_sure">Not Sure</string>
    <string name="bar_edit">Edit</string>
    <string name="bar_band_feel_digs_in">It Digs In</string>
    <string name="bar_band_feel_digs_in_desc">The band digs in and feels tight</string>
    <string name="bar_band_feel_straight">It’s straight</string>
    <string name="bar_band_feel_straight_desc">The band feels comfortable and is parallel to the floor</string>
    <string name="bar_band_feel_rides_up">It rides up</string>
</resources>