<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Bra.BraFlow">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">





    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/layout_header"
        android:layout_height="60dp">


        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/layout_privacy">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_centerInParent="true"
                android:src="@drawable/privacy" />

        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_header_text"
            android:text="@string/header_text"
            android:visibility="gone"
            android:gravity="center"
            android:textSize="10sp"
            android:textColor="@color/color_text"
            android:layout_toEndOf="@id/layout_privacy"
            android:layout_toStartOf="@id/layout_close"/>


        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/layout_close"
            android:layout_alignParentEnd="true">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_close"
                />


        </RelativeLayout>

    </RelativeLayout>


    <!--   brand screens starts here -->


    <RelativeLayout
        android:id="@+id/layout_brand"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_header"
        android:layout_marginTop="2dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="3dp">


        <TextView
            android:id="@+id/tv_right_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:fontFamily="@font/apercu_regular"
            android:text="@string/footwear_right_size"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/tv_get_recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_right_size"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/apercu_regular"
            android:text="@string/footwear_get_recommendation"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/tv_what_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_get_recommendation"
            android:layout_marginTop="45dp"
            android:text="@string/footwear_fit_what_brand"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/et_what_brand"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/tv_what_brand"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_disabled"
            android:fontFamily="@font/apercu_regular"
            android:gravity="center_vertical"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/grey_3" />


        <TextView
            android:id="@+id/tv_brand_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_what_brand"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/apercu_regular"
            android:text="@string/brand_not_in_list"
            android:textColor="@color/color_error"
            android:textSize="11sp"
            android:visibility="gone" />


        <RelativeLayout
            android:id="@+id/layout_add"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/tv_what_brand"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_add" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/layout_brands"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_what_brand"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="120dp">


            <TextView
                android:id="@+id/tv_brand_1"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:background="@drawable/bg_button_unselected"
                android:fontFamily="@font/apercu_regular"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textScaleX="1"
                android:text="@string/footwear_brand_adidas"
                android:textAllCaps="true"
                android:textColor="@color/grey_3"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/tv_brand_2"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginStart="11dp"
                android:layout_toEndOf="@+id/tv_brand_1"
                android:background="@drawable/bg_button_unselected"
                android:fontFamily="@font/apercu_regular"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textScaleX="1"
                android:text="@string/footwear_brand_nike"
                android:textAllCaps="true"
                android:textColor="@color/grey_3"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/tv_brand_3"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginStart="11dp"
                android:layout_toEndOf="@+id/tv_brand_2"
                android:background="@drawable/bg_button_unselected"
                android:fontFamily="@font/apercu_regular"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textScaleX="1"
                android:text="@string/footwear_brand_vans"
                android:textAllCaps="true"
                android:textColor="@color/grey_3"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/tv_brand_4"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginStart="11dp"
                android:layout_toEndOf="@+id/tv_brand_3"
                android:background="@drawable/bg_button_unselected"
                android:fontFamily="@font/apercu_regular"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textScaleX="1"
                android:text="@string/footwear_brand_melissa"
                android:textAllCaps="true"
                android:textColor="@color/grey_3"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_brand_5"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_toEndOf="@+id/tv_brand_4"
                android:background="@drawable/bg_button_unselected"
                android:fontFamily="@font/apercu_regular"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_marginStart="11dp"
                android:textScaleX="1"
                android:text="@string/footwear_brand_puma"
                android:textAllCaps="true"
                android:textColor="@color/grey_3"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_brand_6"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_below="@+id/tv_brand_1"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button_unselected"
                android:fontFamily="@font/apercu_regular"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textScaleX="1"
                android:text="@string/footwear_brand_aldo"
                android:textAllCaps="true"
                android:textColor="@color/grey_3"
                android:textSize="12sp" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/layout_brand_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_what_brand"
            android:background="@drawable/bg_edit_disabled"
            android:visibility="gone">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_brand_suggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_brands"
            android:layout_alignParentBottom="true"
            android:paddingBottom="65dp">


            <TextView
                android:id="@+id/tv_brand_continue"
                android:layout_width="165dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@color/color_background_button_disabled"
                android:fontFamily="@font/apercu_medium"
                android:gravity="center"
                android:text="@string/text_continue"
                android:textColor="@color/white" />

        </RelativeLayout>


    </RelativeLayout>


    </RelativeLayout>


</ScrollView>